Responsive design fixed on small device

--- a/src/assets/scss/components/_data-migration-services.scss
+++ b/src/assets/scss/components/_data-migration-services.scss
@@ -6,40 +6,55 @@
 
 .data-migration-simple{
     background-repeat: no-repeat;
-    background-position: center right;
-    background-size: 50%;
+    background-position: bottom right;
+    background-size: 53.3%;
     background-color: #040C12;
     color: #fff;
-    padding: 1rem 0 3.9rem 8.5rem;
-    .section-header{
-        margin: 0 0 5rem;
-        .section-header__title{
-            color: #fff;
-        }
-        .section-header__Orangesub-title{
-            color: #fff;
-            max-width: 101.1rem;
+    padding: 3rem 0;
+    @include respond(mobile){
+        background-image: none !important;
+    }
+    @include respond(tab-port){
+        padding: .8vmin 0 5vmin 8.5vmin;
+        .section-header{
+            margin: 0 0 3vmin;
+            .section-header__Orangesub-title{
+                color: #fff;
+                max-width: 101.1vmin;
+            }
         }
     }
-    .data-migration-block-wrap{
-        margin: 0 0 4.4rem;
+    .section-header__title, .section-header__Orangesub-title{
+        color: #fff;
     }
     .data-migration-block {
         position: relative;
-        padding: 1rem 0 1rem 13.6rem;
-        min-height: 11.6rem;
-        margin: 0 0 3rem;
-        max-width: 80rem;
+        margin: 0 0 2rem;
+        @include respond(tab-port){
+            max-width: 80vmin;
+            min-height: 11.6vmin;
+            margin: 0 0 2vmin;
+            padding: 1vmin 0 1vmin 13.6vmin;
+        }
         .data-migration-icon-box{
-            width: 11.6rem;
-            height: 11.6rem;
+            width: 7rem;
+            height: 7rem;
             border-radius: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            position: absolute;
-            top: 0;
-            left: 0;
+            margin: 0 0 1.5rem;
+            @include respond(tab-port){
+                width: 11.6vmin;
+                height: 11.6vmin;
+                position: absolute;
+                top: 0;
+                left: 0;
+                margin: 0;
+                img{
+                    width: 100%;
+                }
+            }
             &.migrating{
                 background: #98068D;
             }
@@ -51,74 +66,99 @@
             }
         }
         h2{
-            font-size: 2.7rem;
+            font-size: 1.8rem;
             font-family: "Product Sans", sans-serif;
             font-weight: 700;
+            @include respond(mobile){
+                margin: 0 0 1rem;
+            }
+            @include respond(tab-port){
+                font-size: 2.7vmin;
+            }
         }
         p{
-            font-weight: 500;
-            line-height: 2rem;
             margin: 0;
+            @include respond(tab-port){
+                line-height: 2vmin;
+                font-weight: 500;
+            }
         }
         &:last-child{
             margin: 0;
         }
     }
-    @include respond(large-desktop){
-        background-position: top -6.5rem right;
-        background-size: auto;
-        padding-top: 8rem;
-    }
 }
 
 .what-can-we-migrate{
-    padding: 8rem 0 3.5rem;
-    .section-header{
-        margin: 0 0 7.5rem;
-        &__Orangesub-title{
-            max-width: 106.8rem;
-            margin: 0 auto;
+    @include respond(mobile){
+        padding: 3rem 0;
+    }
+    @include respond(tab-port){
+        .section-header{
+            margin: 0 0 7.5vmin;
+            &__Orangesub-title{
+                max-width: 106.8vmin;
+                margin: 0 auto;
+            }
         }
     }
     .wcw-migrate-block-wrap{
+        [class^="col-"]:not(:last-child){
+            .wcw-migrate-block{
+                margin: 0 0 2rem;
+                @include respond(tab-port){
+                    margin: 0 0 5vmin;
+                }
+            }
+        }
         .wcw-migrate-block{
             position: relative;
-            padding: 0 13rem 0 14.6rem;
-            margin: 0 0 5rem;
+            @include respond(tab-port){
+                padding: 0 13vmin 0 14.6vmin;
+            }
             .wcw-icon-box{
-                width: 10.6rem;
-                height: 10.6rem;
+                width: 5rem;
+                height: 5rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                position: absolute;
-                top: 0;
-                left: 0;
+                margin: 0 0 1.5rem;
+                @include respond(tab-port){
+                    width: 10.6vmin;
+                    height: 10.6vmin;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    margin: 0;
+                    img{
+                        width: 100%;
+                    }
+                }
             }
             h3{
                 text-transform: uppercase;
-                font-size: 2.2rem;
+                font-size: 1.6rem;
                 font-family: "Product Sans", sans-serif;
                 font-weight: 700;
-                margin: 0 0 1.5rem;
+                margin: 0 0 1rem;
+                @include respond(tab-port){
+                    font-size: 2.2vmin;
+                    margin: 0 0 1.5vmin;
+                }
             }
             ul{
                 li{
                     font-weight: 300;
-                    margin: 0 0 .5rem;
+                    margin: 0 0 .7rem;
+                    @include respond(tab-port){
+                        margin: 0 0 .5vmin;
+                        background-size: 6.3%;
+                    }
                     &:last-child{
                         margin: 0;
                     }
                 }
             }
         }
-        [class^="col-"]:last-child{
-            .wcw-migrate-block{
-                margin: 0;
-            }
-        }
-    }
-    @include respond(large-desktop){
-        padding: 0;
     }
 }
